@@ -30,13 +30,12 @@ public class LoginPageEndpoint {
 
         if (userOptional.isPresent()) {
             User user = userOptional.get();
-
             // Validate the password (assuming you're using plain text for now)
             // Ideally, you should use a secure hash comparison (e.g., BCrypt)
             if (user.getPassword().equals(password)) {
                 // Successful login
-                log.info("User successfully logged in: {}", email);
-                return ResponseEntity.ok(Collections.singletonMap("message", "Login successful!"));
+                log.info("User successfully logged in: {}", user.getEmailAddress());
+                return ResponseEntity.ok(Map.of("message", "Login successful!", "userType", user.getUserType()));
             } else {
                 // Incorrect password
                 log.warn("Incorrect password for user: {}", email);
